# clip-annotation-app

./: .gitignore  Caddyfile  README.md  docker-compose
.github/workflows/: pythonapp.yml
annotation-app/: Dockerfile  README.md  package-lock.json  package.json  webpack.config.js
annotation-app/public/: index.html
annotation-app/src/: Annotation.css  Annotation.js  Annotation.tsx  App.js  App.tsx  AutoSuggest.css  AutoSuggest.js  Help.tsx  Login.css  Login.css.d.ts  Login.js  Login.tsx  PacketCreation.tsx  PacketDeletion.tsx  Question.css  Question.css.d.ts  Question.js  Question.tsx  Register.js  Register.tsx  Span.tsx  TaggedInfo.js  TaggedInfo.tsx  Util.tsx  WordWithMention.tsx  allthings2.js  index.tsx
api-entilzha/src/: Dockerfile  entity.json  main.py  paste.py  qanta.py  requirements.txt
quel-api/: .gitignore  .pylintrc  Dockerfile  README.md  populate.py  pyproject.toml
quel-api/quel/: database.py  download.py  entity.py  log.py  populate.py  preprocess.py  qanta.py  security.py  security_config_dev.py  web.py
quel-api/tests/: test_populate.py
quel-api/tests/fixtures/: qanta_tokenized.json  question_2.json
