[tool.poetry]
name = "quel"
version = "0.1.0"
description = ""
authors = ["EntilZha <me@pedro.ai>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.54.1"
click = "^7.1.1"
sqlalchemy = "^1.3.16"
spacy = "^2.2.4"
uvicorn = "^0.11.3"
aiofiles = "^0.5.0"
ipython = "^7.13.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.1"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
